--- a/hw3/hw3_prob1.ipynb
+++ b/hw3/hw3_prob1.ipynb
@@ -8,7 +8,7 @@
     "---\n",
     "\n",
     "<h1><center>SDSE Homework 3 <br><br> Problem 1: Using SVD for Image Compression </center></h1>\n",
-    "<h3><center>By Pavan M. Reddy</h3>\n",
+    "<h3><center>By Pavan M. Reddy [worked with Joshua Duarte]</h3>\n",
     "\n",
     "---\n",
     "\n",
