--- a/hw3/hw3_prob2.ipynb
+++ b/hw3/hw3_prob2.ipynb
@@ -8,7 +8,7 @@
     "---\n",
     "\n",
     "<h1><center>SDSE Homework 3 <br><br> Problem 2: Principal Components Analysis </center></h1>\n",
-    "<h3><center>By Pavan M. Reddy</h3>\n",
+    "<h3><center>By Pavan M. Reddy [worked with Joshua Duarte]</h3>\n",
     "---\n",
     "\n",
     "In this problem we will use principal components analysis to reduce the number of columns in a dataset. The data consist of `N=100` iid samples of a multivariate random variable with `D=16` components. In other words, 100 measurements from 16 interdependent quantities. Our goal is to use PCA to reduce the number of columns in the matrix to 2.\n",
