--- a/hw3/hw3_prob1.ipynb
+++ b/hw3/hw3_prob1.ipynb
@@ -8,7 +8,7 @@
     "---\n",
     "\n",
     "<h1><center>SDSE Homework 3 <br><br> Problem 1: Using SVD for Image Compression </center></h1>\n",
-    "<h3><center>By Pavan M. Reddy [worked with Joshua Duarte]</h3>\n",
+    "<h3><center>By Pavan M. Reddy [Worked with Joshua Duarte]</h3>\n",
     "\n",
     "---\n",
     "\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 105,
    "id": "ec4f798d",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 106,
    "id": "3121bf40",
    "metadata": {},
    "outputs": [],
@@ -50,17 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 107,
    "id": "58ad739e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc2d864fa90>"
+       "<matplotlib.image.AxesImage at 0x7fb7808c1bd0>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 108,
    "id": "175188c0",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 109,
    "id": "f34b9d2a",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 110,
    "id": "4a91baa3",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "((446, 446), (160,), (160, 160))"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 111,
    "id": "2153bbcd",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 112,
    "id": "f9c0f678",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 113,
    "id": "92944482",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 114,
    "id": "00e442ad",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 115,
    "id": "e1184485",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 116,
    "id": "88356f32",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 117,
    "id": "b885c085",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 118,
    "id": "10720c75",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 119,
    "id": "0b02b385",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 120,
    "id": "7aa84926",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 121,
    "id": "75d1ff54",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 122,
    "id": "fd4f6263",
    "metadata": {},
    "outputs": [],
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 123,
    "id": "ef4dc9fd",
    "metadata": {},
    "outputs": [],
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 124,
    "id": "7a61a5cd",
    "metadata": {},
    "outputs": [],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 125,
    "id": "57a3b275",
    "metadata": {},
    "outputs": [],
